--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2024"
 
 [dependencies]
 alsa = "0.9.1"
+alsa-sys = "0.3.1"
 clap = { version = "4.5.36", features = ["derive", "unicode", "wrap_help", "env", "string", "unstable-v5"] }
 clap_derive = { version = "4.5.32", features = ["unstable-v5"] }
 hound = "3.5.1"
 
-# cargo b -r -Z build-std=core,alloc,std,panic_abort -Z build-std-features=optimize_for_size,panic_immediate_abort --target aarch64-apple-darwin
+# 编译调试版本: cargo b --target armv7-unknown-linux-gnueabihf
+# 编译生产版本: cargo b -r -Z build-std=core,alloc,std,panic_abort -Z build-std-features=optimize_for_size,panic_immediate_abort --target armv7-unknown-linux-gnueabihf
 
 [lints.rust]
 dead_code = { level = "allow", priority = 1 }
