--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ alsa-sys = "0.3.1"
 clap = { version = "4.5.37", features = ["derive", "unicode", "wrap_help", "env", "string", "unstable-v5"] }
 clap_derive = { version = "4.5.32", features = ["unstable-v5"] }
 hound = "3.5.1"
+replace_with = { version = "0.1.7", features = ["nightly", "panic_abort"] }
 
 # 编译调试版本: cargo b --target armv7-unknown-linux-gnueabihf
 # 编译生产版本: cargo b -r -Z build-std=core,alloc,std,panic_abort -Z build-std-features=optimize_for_size,panic_immediate_abort --target armv7-unknown-linux-gnueabihf
