--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2024"
 [dependencies]
 alsa = "0.9.1"
 alsa-sys = "0.3.1"
-clap = { version = "4.5.37", features = ["derive", "unicode", "wrap_help", "env", "string", "unstable-v5"] }
+clap = { version = "4.5.38", features = ["derive", "unicode", "wrap_help", "env", "string", "unstable-v5"] }
 clap_derive = { version = "4.5.32", features = ["unstable-v5"] }
 hound = "3.5.1"
+log = { version = "0.4.27", features = ["release_max_level_info"] }
 replace_with = { version = "0.1.7", features = ["nightly", "panic_abort"] }
+tracing = { version = "0.1.41", features = ["log", "release_max_level_info"] }
 
 # 编译调试版本: cargo b --target armv7-unknown-linux-gnueabihf
 # 编译生产版本: cargo b -r -Z build-std=core,alloc,std,panic_abort -Z build-std-features=optimize_for_size,panic_immediate_abort --target armv7-unknown-linux-gnueabihf
